--- a/style.css
+++ b/style.css
@@ -7,8 +7,27 @@ body {
 header {
     background-color: #4a2c2a;
     color: white;
-    text-align: center;
     padding: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header h1 {
+    margin: 0;
+}
+.user-info {
+    text-align: right;
+}
+.user-info p {
+    margin: 0;
+}
+.username {
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-bottom: 0.3em;
+}
+.currency {
+    font-size: 0.9em;
 }
 nav {
     background-color: #6d4c41;
