--- a/style.css
+++ b/style.css
@@ -168,3 +168,12 @@ footer {
         flex-direction: column;
     }
 }
+
+header h1 a {
+    color: inherit;
+    text-decoration: none;
+}
+
+header h1 a:hover {
+    text-decoration: underline;
+}
